--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>01/2025: 4 papers accepted to ICLR'25: <a href="https://osu-nlp-group.github.io/UGround/">UGround</a>, <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>, <a href="https://arxiv.org/abs/2410.02642">In-context Reranking</a>, <a href="https://arxiv.org/abs/2408.06327">VisualAgentBench</a></li>
             <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
             <li>11/2024: Check out our tutorial "<a href="https://language-agent-tutorial.github.io/">Language Agents: Foundations, Prospects, and Risks</a>" at EMNLP'24!</li>
             <li>11/2024: Talk at University of Michigan, Princeton University, LMU Munich/TU Darmstadt on language agents.</li>
@@ -286,6 +287,30 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">Navigating the Digital World as Humans Do: Universal Visual Grounding for GUI Agents
+                </span> <br />
+                <span class="paperAuthor">Boyu Gou, Ruohan Wang, Boyuan Zheng, Yanan Xie, Cheng Chang, Yiheng Shu, Huan Sun, Yu Su. In the International Conference on Learning Representations, 2025 (<b>ICLR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/UGround/">website</a>] [<a href="https://arxiv.org/abs/2410.05243">paper</a>] [<a href="https://github.com/OSU-NLP-Group/UGround">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">ScienceAgentBench: Toward Rigorous Assessment of Language Agents for Data-Driven Scientific Discovery
+                </span> <br />
+                <span class="paperAuthor">Ziru Chen, Shijie Chen, Yuting Ning, Qianheng Zhang, Boshi Wang, Botao Yu, Yifei Li, Zeyi Liao, Chen Wei, Zitong Lu, Vishal Dey, Mingyi Xue, Frazier N. Baker, Benjamin Burns, Daniel Adu-Ampratwum, Xuhui Huang, Xia Ning, Song Gao, Yu Su, Huan Sun. In the International Conference on Learning Representations, 2025 (<b>ICLR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/ScienceAgentBench/">website</a>] [<a href="https://arxiv.org/abs/2410.05080">paper</a>] [<a href="https://github.com/OSU-NLP-Group/ScienceAgentBench">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">Attention in Large Language Models Yields Efficient Zero-Shot Re-Rankers
+                </span> <br />
+                <span class="paperAuthor">Shijie Chen, Bernal Jiménez Gutiérrez, Yu Su. In the International Conference on Learning Representations, 2025 (<b>ICLR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2410.02642">paper</a>] [<a href="https://github.com/OSU-NLP-Group/In-Context-Reranking">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">VisualAgentBench: Towards Large Multimodal Models as Visual Foundation Agents
+                </span> <br />
+                <span class="paperAuthor">Xiao Liu*, Tianjie Zhang*, Yu Gu*, Iat Long Iong, Yifan Xu, Xixuan Song, Shudan Zhang, Hanyu Lai, Xinyi Liu, Hanlin Zhao, Jiadai Sun, Xinyue Yang, Yu Yang, Zehan Qi, Shuntian Yao, Xueqiao Sun, Siyi Cheng, Qinkai Zheng, Hao Yu, Hanchen Zhang, Wenyi Hong, Ming Ding, Lihang Pan, Xiaotao Gu, Aohan Zeng, Zhengxiao Du, Chan Hee Song, Yu Su, Yuxiao Dong, Jie Tang. In the International Conference on Learning Representations, 2025 (<b>ICLR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2408.06327">paper</a>] [<a href="https://github.com/THUDM/VisualAgentBench/">code</a>] (*: Equal Contribution)</span>
+              </li>
               <li>
                 <span class="paperTitle">HippoRAG: Neurobiologically Inspired Long-Term Memory for Large Language Models
                 </span> <br />
