--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             </li>
             <li>
               <span class="paperTitle">A Holistic and Critical Look at Language Agents (<a href="resources/language_agents_YuSu_2024.pdf">slides</a>)</span> <br />
-              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton</span>
+              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton, NVIDIA</span>
             </li>
             <li>
               <span class="paperTitle">Pressing Safety Issues with Language Agents (<a href="https://tinyurl.com/language-agent-safety-2024">slides</a>) (<a href="https://neurips.cc/virtual/2024/workshop/84748">recording</a> [starting 5:44:00; login required])</span> <br />
