--- a/index.html
+++ b/index.html
@@ -41,17 +41,27 @@
         <h2>About Me</h2>
         <div class="divider"></div>
 
-        <img src="images/avatar.jpg" alt="Yu Su" style="width:172px;height:160px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm a Distinguished Assistant Professor of Engineering Inclusive Excellence at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I also spend some fun time at <a href="https://www.microsoft.com/en-us/research/project/semantic-machines/">Microsoft Semantic Machines</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
+        <img src="images/YuSu.jpeg" alt="Yu Su" style="width:225px;height:225px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
+        <p>I'm a Distinguished Assistant Professor of Engineering at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
         </p>
         <p>
-        I have broad interests in developing artificial intelligence, with a primary interest in the role of language, as a vehicle of thought and communication, in both artificial and human intelligence. These days, I'm particularly fond of <i>foundation models</i>, including both large language models (LLMs) and multimodal ones, and I believe they are an important step towards more general AI and should be studied thoroughly. I enjoy developing <i><a href="https://yusu.substack.com/p/language-agents">language agents</a></i> that, in a robust and trustworthy way, automate a lot of our tedious tasks and make the computing world more accessible to all. I like to <i>make things that work</i>, which often means operating at scale and in real-world settings. For that I also deeply care about <i>generalizability</i>, <i>interpretability</i>, <i>efficiency</i>, and <i>robustness</i>. Finally, I believe in translational research and seek to leverage AI capabilities to empower a variety of domains such as <i>biology and biomedicine</i>, and meanwhile seek inspirations from these disciplines to develop better AI.  
-        </p>
-	
+        I'm broadly interested in artificial intelligence, with a primary interest in the role of language as a vehicle of reasoning and communication. These days, I spend much of my time thinking about language agents [<a href="https://yusu.substack.com/p/language-agents">blog</a>, <a href="https://tinyurl.com/language-agent-tutorial-2024">tutorial</a>], an emerging class of AI agents characterized by their language understanding and production capabilities. 
+        
+
+        <p>I'm fascinated by biological intelligence and the power of natural selection, so one may find many references or direct inspirations from biological intelligence in my work. Meanwhile, biological systems also have their constraints and limitations, and I hope to develop advanced artificial intelligence to augment human intelligence. Some facets and applications of intelligence I'm currently interested in:</p>
+
+        <ul>
+          <li>Reasoning and grounding, especially in multimodal contexts [<a href="https://mmmu-benchmark.github.io/">MMMU</a>, <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, <a href="https://aclanthology.org/2023.acl-long.270.pdf">Pangu</a>, <a href="https://osu-nlp-group.github.io/UGround/">UGround</a>]</li>
+          <li>Planning and world models [<a href="https://dki-lab.github.io/LLM-Planner/">LLM-Planner</a>, <a href="https://arxiv.org/abs/2411.06559">WebDreamer</a>]</li>
+          <li>Memory and non-parametric continual learning [<a href="https://github.com/OSU-NLP-Group/HippoRAG">HippoRAG</a>]</li>
+          <li>Benchmarking and evaluation [<a href="https://osu-nlp-group.github.io/Mind2Web/">Mind2Web</a>, <a href="https://osu-nlp-group.github.io/TravelPlanner/">TravelPlanner</a>]</li>
+          <li>AI for sciences [<a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>]</li>
+        </ul>
+    
 	<div>
 	<!-- <b>Thanks to generous support from NSF (<a href="https://icicle.osu.edu/">ICICLE Institute</a>, <a href="https://imageomics.osu.edu/">Imageomics Institute</a>, <a href="https://www.nsf.gov/news/special_reports/announcements/092221.jsp">Convergence Accelerator</a>), my group has multiple openings for students (PhD/Master/Undergraduate) and post-docs. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, and data mining (unfortunately due to the high volumn I may not be able to reply to every email).</b> -->
 
-  <p>I'm always looking for highly motivated students. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, or AI in general (unfortunately due to the high volumn I may not be able to reply to every email)</p>
+  <!-- <p>I'm always looking for highly motivated students. Drop me an email with CV and transcripts if you are interested in natural language processing, machine learning, or AI in general (unfortunately due to the high volumn I may not be able to reply to every email)</p> -->
 
   <!-- <p><b>I'm hiring a postdoc (ML/Vision/NLP background) with potential topics including (multimodal) foundation models for sciences, LLMs, language agents and tool use. Send me an <a href="mailto: su.809@osu.edu">email</a> with CV and interests!</b></p> -->
 	</div>
@@ -66,7 +76,7 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
-            <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
             <li>02/2025: Guest lecture on memory, reasoning, and planning of language agents at the <a href="https://llmagents-learning.org/sp25">Berkeley Advanced LLM Agents MOOC</a>.</li>
             <li>01/2025: 4 papers accepted to ICLR'25: <a href="https://osu-nlp-group.github.io/UGround/">UGround</a> (<b>Oral</b>), <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>, <a href="https://arxiv.org/abs/2410.02642">In-context Reranking</a>, <a href="https://arxiv.org/abs/2408.06327">VisualAgentBench</a></li>
             <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
