--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <h2>About Me</h2>
         <div class="divider"></div>
 
-        <img src="images/YuSu.jpeg" alt="Yu Su" style="width:225px;height:225px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm a Distinguished Assistant Professor of Engineering at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. 
+        <img src="images/YuSu.jpeg" alt="Yu Su" style="width:245;height:245px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
+        <p>I'm a Distinguished Assistant Professor of Engineering at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>. I'm a 2025 Sloan Research Fellow and received several best/outstanding paper awards from CVPR and ACL.   
         </p>
         <p>
         I'm broadly interested in artificial intelligence, with a primary interest in the role of language as a vehicle of reasoning and communication. These days, I spend much of my time thinking about language agents [<a href="https://yusu.substack.com/p/language-agents">blog</a>, <a href="https://language-agent-tutorial.github.io/">tutorial</a>], an emerging class of AI agents characterized by their language understanding and production capabilities. 
@@ -75,6 +75,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
+            <li>02/2025: Honored to receive the <a href="https://sloan.org/fellowships/2025-Fellows">Sloan Research Fellowship</a>!</li>
             <li>02/2025: Guest lecture on memory, reasoning, and planning of language agents at the <a href="https://llmagents-learning.org/sp25">Berkeley Advanced LLM Agents MOOC</a>.</li>
             <li>01/2025: 4 papers accepted to ICLR'25: <a href="https://osu-nlp-group.github.io/UGround/">UGround</a> (<b>Oral</b>), <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>, <a href="https://arxiv.org/abs/2410.02642">In-context Reranking</a>, <a href="https://arxiv.org/abs/2408.06327">VisualAgentBench</a></li>
             <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
@@ -232,6 +233,7 @@
             <h2>Awards & Honors</h2>
             <div class="divider"></div>
             <ul>
+                <li>Alfred P. Sloan Research Fellowship, 2025</li> 
                 <li>Best Student Paper Award, CVPR, 2024</li> 
                 <li>Best Paper Finalist, CVPR, 2024</li>
                 <li>Cisco Faculty Award, 2024</li>
