--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   	<h1>Yu Su (<span style="font-family:Georgia,Times New Roman,KaiTi,STKaiti,serif;font-size:32pt">苏煜</span>)</h1>
   	<div id="header">
     	<a href="#">Home</a>
-        <!-- <a href="resources/CV_YuSu.pdf">CV</a> -->
-         <a href="#news">News</a>
+        <a href="resources/CV_YuSu.pdf">CV</a>
+         <!-- <a href="#news">News</a> -->
         <!-- <a href="#experience">Experience</a> -->
         <a href="#awards">Awards</a>
         <a href="#student">Students</a>
@@ -36,6 +36,8 @@
         
     </div>
     <div id="contentColumn">
+
+      <iframe src="https://ghbtns.com/github-btn.html?user=twbs&repo=bootstrap&type=star&count=true" frameborder="0" scrolling="0" width="150" height="20" title="GitHub"></iframe>
 
 	<div class="contentBlock">
         <h2>About Me</h2>
