--- a/index.html
+++ b/index.html
@@ -210,13 +210,17 @@
               <span class="paperAuthor"><a href="https://language-agent-tutorial.github.io/">EMNLP 2024</a> (w/ Diyi Yang, Shunyu Yao, Tao Yu)</span>
             </li>
             <li>
+              <span class="paperTitle">On Memory, Reasoning, and Planning of Language Agents (<a href="https://www.youtube.com/watch?v=zvI4UN2_i-w&t=3s">recording</a>)</span> <br />
+              <span class="paperAuthor"><a href="https://llmagents-learning.org/sp25">Berkeley Advanced LLM Agents MOOC</a> </span>
+            </li>
+            <li>
               <span class="paperTitle">A Holistic and Critical Look at Language Agents (<a href="resources/language_agents_YuSu_2024.pdf">slides</a>)</span> <br />
               <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton, NVIDIA</span>
             </li>
-            <li>
+            <!-- <li>
               <span class="paperTitle">Pressing Safety Issues with Language Agents (<a href="https://tinyurl.com/language-agent-safety-2024">slides</a>) (<a href="https://neurips.cc/virtual/2024/workshop/84748">recording</a> [starting 5:44:00; login required])</span> <br />
               <span class="paperAuthor"><a href="https://www.mlsafety.org/events/neurips/2024">NeurIPS 2024 Agent Safety Workshop</a> </span>
-            </li>
+            </li> -->
             <li>
               <span class="paperTitle">Web Agents: A New Frontier for Embodied Agents (<a href="https://tinyurl.com/web-agents-2024">slides</a>)</span> <br />
               <span class="paperAuthor"><a href="https://cse.engin.umich.edu/event/yu-su-seminar-guest-lecture">University of Michigan</a>, <a href="https://splu-robonlp-2024.github.io/">SpLU-RoboNLP Workshop@ACL'24</a>, ServiceNow</span>
