--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <!-- <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li> -->
             <li>02/2025: Honored to receive the <a href="https://sloan.org/fellowships/2025-Fellows">Sloan Research Fellowship</a>!</li>
+            <li>02/2025: 3 papers accepted to CVPR'25: <a href="https://arxiv.org/abs/2411.16537">RoboSpatial</a>, <a href="https://arxiv.org/abs/2501.11309">Finer-CAM</a>, <a href="https://arxiv.org/abs/2501.09333">Prompt-CAM</a></li>
             <li>02/2025: Guest lecture on memory, reasoning, and planning of language agents at the <a href="https://llmagents-learning.org/sp25">Berkeley Advanced LLM Agents MOOC</a>.</li>
             <li>01/2025: 4 papers accepted to ICLR'25: <a href="https://osu-nlp-group.github.io/UGround/">UGround</a> (<b>Oral</b>), <a href="https://osu-nlp-group.github.io/ScienceAgentBench/">ScienceAgentBench</a>, <a href="https://arxiv.org/abs/2410.02642">In-context Reranking</a>, <a href="https://arxiv.org/abs/2408.06327">VisualAgentBench</a></li>
             <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
@@ -322,6 +323,30 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">RoboSpatial: Teaching Spatial Understanding to 2D and 3D Vision-Language Models for Robotics
+                </span> <br />
+                <span class="paperAuthor">Chan Hee Song, Valts Blukis, Jonathan Tremblay, Stephen Tyree, Yu Su, Stan Birchfield. In the Conference on Computer Vision and Pattern Recognition, 2025 (<b>CVPR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2411.16537">paper</a>] </span>
+              </li>
+              <li>
+                <span class="paperTitle">Finer-CAM: Spotting the Difference Reveals Finer Details for Visual Explanation
+                </span> <br />
+                <span class="paperAuthor">Ziheng Zhang, Jianyang Gu, Arpita Chowdhury, Zheda Mai, David Carlyn, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao. In the Conference on Computer Vision and Pattern Recognition, 2025 (<b>CVPR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2501.11309">paper</a>] </span>
+              </li>
+              <li>
+                <span class="paperTitle">Prompt-CAM: A Simpler Interpretable Transformer for Fine-Grained Analysis
+                </span> <br />
+                <span class="paperAuthor">Arpita Chowdhury, Dipanjyoti Paul, Zheda Mai, Jianyang Gu, Ziheng Zhang, Kazi Sajeed Mehrab, Elizabeth G. Campolongo, Daniel Rubenstein, Charles V. Stewart, Anuj Karpatne, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao. In the Conference on Computer Vision and Pattern Recognition, 2025 (<b>CVPR'25</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2501.09333">paper</a>] </span>
+              </li>
+              <li>
+                <span class="paperTitle">MICE for CATs: Model-Internal Confidence Estimation for Calibrating Agents with Tools
+                </span> <br />
+                <span class="paperAuthor">Nishant Subramani, Jason Eisner, Justin Svegliato, Benjamin Van Durme, Yu Su, Sam Thomson. In the Annual Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics, 2025 (<b>NAACL'25</b>)</span>
+                <span class="paperResource"> [<a href="#">paper</a>] </span>
+              </li>
               <li>
                 <span class="paperTitle">Navigating the Digital World as Humans Do: Universal Visual Grounding for GUI Agents
                 </span> <br />
