--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
             <li>11/2024: Check out our tutorial "<a href="https://language-agent-tutorial.github.io/">Language Agents: Foundations, Prospects, and Risks</a>" at EMNLP'24!</li>
             <li>11/2024: Talk at University of Michigan, Princeton University, LMU Munich/TU Darmstadt on language agents.</li>
-            <li>09/2024: 4 papers accepted to NeurIPS'24 and 1 paper to EMNLP'24: <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, Calibrated Fine-tuning, <a href="https://arxiv.org/abs/2408.16176">VLM4Bio</a>, and <a href="https://arxiv.org/abs/2402.14672">Middleware for LLMs</a>.</li>
+            <li>09/2024: 4 papers accepted to NeurIPS'24 and 1 paper to EMNLP'24: <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, <a href="https://arxiv.org/abs/2409.16223">Calibrated Fine-tuning</a>, <a href="https://arxiv.org/abs/2408.16176">VLM4Bio</a>, and <a href="https://arxiv.org/abs/2402.14672">Middleware for LLMs</a>.</li>
             <li>09/2024: Recent services: Senior Area Chair for ICLR'25, Area Chair for ACL'24, EMNLP'24, COLM'24.</li>
             <li>06/2024: Honored to receive <b>Best Student Paper Award</b> (BioCLIP) and <b>Best Paper Finalist</b> (MMMU) at CVPR'24!</li>
             <li>05/2024: Thrilled to release <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a> and bring my passion about biological intelligence into AI!</li>
