--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   	<h1>Yu Su (<span style="font-family:Georgia,Times New Roman,KaiTi,STKaiti,serif;font-size:32pt">苏煜</span>)</h1>
   	<div id="header">
     	<a href="#">Home</a>
-        <a href="resources/CV_YuSu.pdf">CV</a>
-         <!-- <a href="#news">News</a> -->
+        <!-- <a href="resources/CV_YuSu.pdf">CV</a> -->
+         <a href="#news">News</a>
         <!-- <a href="#experience">Experience</a> -->
         <a href="#awards">Awards</a>
         <a href="#student">Students</a>
@@ -41,8 +41,8 @@
         <h2>About Me</h2>
         <div class="divider"></div>
 
-        <img src="images/YuSu.jpeg" alt="Yu Su" style="width:245;height:245px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
-        <p>I'm a Distinguished Assistant Professor of Engineering at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. I'm a 2025 Sloan Research Fellow and received several best/outstanding paper awards from CVPR and ACL.   
+        <img src="images/YuSu.jpeg" alt="Yu Su" style="width:215;height:215px;float:left;margin-right:20px;margin-bottom:10px;margin-top:5px;">
+        <p>I'm a Distinguished Assistant Professor of Engineering at the <a href="https://cse.osu.edu/">Department of Computer Science and Engineering</a>, The Ohio State University, where I co-direct the <a href="https://twitter.com/osunlp">OSU NLP group</a>, co-lead the Foundational AI team in the <a href="https://icicle.osu.edu/">ICICLE AI Institute</a> and lead the Machine Learning Foundations team in the <a href="https://imageomics.osu.edu/">Imageomics Institute</a>. I got my PhD from <a href="https://cs.ucsb.edu/">University of California, Santa Barbara</a> and my bachelor's degree from <a href="https://www.cs.tsinghua.edu.cn/csen/">Tsinghua University</a>, both in Computer Science. I also spent some fun time as a researcher at Microsoft Semantic Machines. I'm a 2025 Sloan Research Fellow and received several best/outstanding paper awards from CVPR and ACL.   
         </p>
         <p>
         I'm broadly interested in artificial intelligence, with a primary interest in the role of language as a vehicle for reasoning and communication. These days, I spend much of my time thinking about language agents [<a href="https://yusu.substack.com/p/language-agents">blog</a>, <a href="https://language-agent-tutorial.github.io/">tutorial</a>], an emerging class of AI agents characterized by their language understanding and production capabilities. 
@@ -239,6 +239,7 @@
             <div class="divider"></div>
             <ul>
                 <li>Alfred P. Sloan Research Fellowship, 2025</li> 
+                <li>Lumley Interdisciplinary Research Award, OSU, 2025</li> 
                 <li>Best Student Paper Award, CVPR, 2024</li> 
                 <li>Best Paper Finalist, CVPR, 2024</li>
                 <li>Cisco Faculty Award, 2024</li>
@@ -258,7 +259,7 @@
       <a name="student"></a>
         <h2>Students</h2>
         <div class="divider"></div>
-        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ph.D. Students</b></p>
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Current Ph.D. / Postdocs</b></p>
         <ul>
             <li><a href="https://scholar.google.com/citations?user=c5RwjjcAAAAJ">Yu Gu</a> (SP20 &#8211)</li>
             <li><a href="https://bernaljg.github.io/">Bernal Jiménez Gutiérrez</a> (SP20 &#8211)</li>
@@ -271,8 +272,14 @@
             <li><a href="https://boyuanzheng010.github.io/">Boyuan Zheng</a> (AU23 &#8211)</li>
             <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
             <li><a href="https://boyugou.github.io/">Boyu Gou</a> (AU23 &#8211)</li>
-          </ul>
-        <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
+            <li><a href="https://vimar-gu.github.io/">Jianyang Gu</a> (AU24 &#8211, postdoc with Wei-lun Chao, Tanya Berger-Wolf)</li>
+        </ul>
+    </div>
+        <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Alumni</b></p>
+        <ul>
+            <li><a href="https://zexinxu.com/">Jason Xu</a> (MS SP20 &#8211)</li>
+          </ul> 
+        <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
         <ul>
           <li>Jason Xu (AU22 &#8211)</li>
         </ul>
@@ -283,12 +290,7 @@
           <li>Clay Washington</li>
           <li><a href="https://nikolasmcneal.github.io/">Nikolas McNeal</a> &#x2192; Ph.D. at Georgia Tech</li>
           <li><a href="https://samuelstevens.me/">Sam Stevens</a>  &#x2192; Ph.D. at OSU</li>
-        </ul> -->
-        <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Interns/Visiting Scholars</b></p>
-        <ul>
-          <li><a href="https://esteng.github.io/">Elias Stengel-Eskin</a> (2021 summer intern at Microsoft)</li>
-        </ul> -->
-    </div>
+    </div> -->
 
 
     <div class="contentBlock">
@@ -321,7 +323,7 @@
               </li>
 	        </ul> -->
 
-            <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
+            <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p> -->
             <ul>
               <li>
                 <span class="paperTitle">RoboSpatial: Teaching Spatial Understanding to 2D and 3D Vision-Language Models for Robotics
@@ -800,78 +802,8 @@
                 <span class="paperResource"> [<a href="papers/hotnets13_foursquare.pdf">paper</a>] </span>
                 </li>
             </ul>
-		
-	    <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tutorials</b></p>
-            <ul>
-		<li>
-                <span class="paperTitle">Scalable Construction and Querying of Massive Knowledge Bases</span> <br />
-                <span class="paperAuthor">Xiang Ren, Yu Su, Pedro Szekely, Xifeng Yan. In Proc. of the International Conference on World Wide Web, 2018 (<b>WWW’18</b>)</span>
-                <span class="paperResource"> [<a href="http://usc-isi-i2.github.io/WWW18_1/">website</a>] </span>
-		</li>
-		<li>
-                <span class="paperTitle">Construction and Querying of Large-scale Knowledge Bases</span> <br />
-                <span class="paperAuthor">Xiang Ren, Yu Su, Xifeng Yan. In Proc. of the ACM International Conference on Information and Knowledge Management, 2017 (<b>CIKM’17</b>)</span>
-                <span class="paperResource"> [<a href="http://xren7.web.engr.illinois.edu/tutorial-cikm17.html">website</a>] </span>
-		</li>
-            </ul> -->
-		
-	    <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Patents</b></p>
-        <ul>
-		    <li>
-            <span class="paperTitle">Natural Language Interface to Web API (co-inventor)</span> <br />
-            <span class="paperAuthor">US Patent Granted 10496452B2</span><br />
-<span class="paperAuthor">A framework for building natural language interface to web API via crowdsourcing with a hierarchical
-probabilistic model and optimization algorithm for crowdsourcing.</span>
-            </li>
-            <li>
-            <span class="paperTitle">Natural Language to API Conversion (co-inventor)</span> <br />
-            <span class="paperAuthor">US Patent Pending 15/919,209</span><br />
-            <span class="paperAuthor">A framework for building interactive natural language interface to web APIs.</span>
-            </li>
-        </ul> -->
       </div>
-	    
-	
-
-
-        <!-- <h3 style="text-indent:20px">Under Review</h3> -->
     </div>
-
-
-    <!-- <div class="contentBlock">
-      <a name="service"></a>
-        <h2>Service</h2>
-        <div class="divider"></div>
-        <ul>
-	    <li><b>Organizer/Co-chair</b>: <a href="https://2021.naacl.org/">NAACL'21</a> (Faculty Advisor to Student Research Workshop), <a href="https://nlp4prog.github.io/2021/">NLP4Prog'21</a>, <a href="https://nli-acl2020.github.io/">NLI'20</a> (co-located with ACL'20), KBCOM'18 (co-located with WSDM'18)</li>
-	    <li><b>Area Chair</b>: ACL'22, NLPCC'20
-      <li><b>Program Committee Member</b>: ACL'22, ACL'21, EMNLP'21, NAACL'21, AKBC'21, KDD'21, AAAI'21, KDD'20 (session chair), ACL'20, EMNLP'20, AKBC'20, KDD'19 (session chair), NAACL'19, AAAI'19, AKBC'19, KDD'18, ACL'18, EMNLP'18, WWW'18, NLPCC'18, CoNLL'18, ACL'17, EMNLP'17, NLPCC'17, CIKM'17 (session chair)</li>
-      <li><b>Reviewer</b>: TACL, ACL Rolling Review, IEEE TNNLS, IEEE TKDE </li>
-        </ul>
-    </div> -->
-
-    <!--
-    <div class="contentBlock">
-    	<a name="teaching"></a>
-        <h2>Teaching</h2>
-        <div class="divider"></div>
-        <ul>
-          <li><b>Guest Lecturer</b> (UCSB)<br/>
-              <ul>
-              <li>[Fall 2016] <a href="https://www.cs.ucsb.edu/~xyan/classes/CS273-2016fall/">Data and Knowledge Bases</a> (CS 273)<br/></li>
-              <li>[Sping 2014/Spring 2015/Spring 2016] <a href="https://www.cs.ucsb.edu/~xyan/classes/CS291K-2016spring/">Advanced Data Mining</a> (CS 291K/290D)<br/></li>
-              </ul>
-          </li>
-          <li><b>Teaching Assistant</b> (UCSB)<br/>
-            <ul>
-              <li>[Spring 2013] <a href="http://www.cs.ucsb.edu/~mikec/cs32/index.html">Object-Oriented Design and Implementation</a> (CS 32)<br/></li>
-              <li>[Winter 2013] <a href="http://www.cs.ucsb.edu/~ravenben/classes/176b/index.html">Network Computing</a> (CS 176B)<br/></li>
-              <li>[Fall 2012] <a href="http://www.cs.ucsb.edu/~almeroth/classes/F12.176A">Introduction to Computer Communication Networks</a> (CS 176A)</li>
-            </ul>
-          </li>
-        </ul>
-    </div>
-    -->
 
     <div class="contentBlock">
       <a name="teaching"></a>
