--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <li>
             <span class="paperTitle">From RAG to Memory: Non-Parametric Continual Learning for Large Language Models
             </span> <br />
-            <span class="paperAuthor">Bernal Jiménez Gutiérrez, Yiheng Shu, Weijian Qi, Sizhe Zhou, Yu Su.</span>
+            <span class="paperAuthor">Bernal Jiménez Gutiérrez*, Yiheng Shu*, Weijian Qi, Sizhe Zhou, Yu Su. (*: Equal Contribution)</span>
             <span class="paperResource"> [<a href="https://arxiv.org/abs/2502.14802">preprint</a>] </span>
           </li>
           <li>
