--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
             <ul>
                 <li>Alfred P. Sloan Research Fellowship, 2025</li> 
                 <li>Lumley Interdisciplinary Research Award, OSU, 2025</li> 
+                <li>Faculty Teaching Award, OSU, 2025</li> 
                 <li>Best Student Paper Award, CVPR, 2024</li> 
                 <li>Best Paper Finalist, CVPR, 2024</li>
                 <li>Cisco Faculty Award, 2024</li>
