--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
             <li><a href="https://boyuanzheng010.github.io/">Boyuan Zheng</a> (AU23 &#8211)</li>
             <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
             <li><a href="https://boyugou.github.io/">Boyu Gou</a> (AU23 &#8211)</li>
+            <li><a href="https://tzmhuang.github.io/">Zanming Huang</a> (AU24 &#8211)</li>
             <li><a href="https://vimar-gu.github.io/">Jianyang Gu</a> (AU24 &#8211, postdoc with Wei-Lun Chao, Tanya Berger-Wolf)</li>
         </ul>
     </div>
